third_party/move/move-compiler-v2/transactional-tests/tests/operator_eval/op_with_side_effect_21.operator-eval-lang-1.exp
processed 3 tasks
task 0 lines 1-17:  publish [module 0xc0ffee::m {]
Error: compilation errors:
 error: A sequence within an operand of binary operation `+` can obscure program logic and is not allowed by this compiler.
  ┌─ TEMPFILE:9:9
  │
9 │         inc(&mut x) + { inc(&mut x); inc(&mut x) + inc(&mut x) } + { inc(&mut x); inc(&mut x); inc(&mut x) }
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         │             │
  │         │             non-empty sequence
  │         binary operation `+`
  │
  = To compile this code, either:
  = 1. upgrade to language version 2.0 or later (which uses strict left-to-right evaluation order),
  = 2. rewrite the code to remove sequences from directly within binary operations,
  =    e.g., save intermediate results providing explicit order.
  = In either of these cases, please ensure to check the code does what you expect it to, because of changed semantics.

error: A sequence within an operand of binary operation `+` can obscure program logic and is not allowed by this compiler.
  ┌─ TEMPFILE:9:9
  │
9 │         inc(&mut x) + { inc(&mut x); inc(&mut x) + inc(&mut x) } + { inc(&mut x); inc(&mut x); inc(&mut x) }
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         │                                                          │
  │         │                                                          non-empty sequence
  │         binary operation `+`
  │
  = To compile this code, either:
  = 1. upgrade to language version 2.0 or later (which uses strict left-to-right evaluation order),
  = 2. rewrite the code to remove sequences from directly within binary operations,
  =    e.g., save intermediate results providing explicit order.
  = In either of these cases, please ensure to check the code does what you expect it to, because of changed semantics.

error: A sequence within an operand of binary operation `+` can obscure program logic and is not allowed by this compiler.
   ┌─ TEMPFILE:13:9
   │
13 │         inc(&mut {x = x + 1; x}) + { inc(&mut x); inc(&mut x) + inc(&mut x) } + { inc(&mut x); inc(&mut x); inc(&mut x) }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │        │
   │         │        non-empty sequence
   │         binary operation `+`
   │
   = To compile this code, either:
   = 1. upgrade to language version 2.0 or later (which uses strict left-to-right evaluation order),
   = 2. rewrite the code to remove sequences from directly within binary operations,
   =    e.g., save intermediate results providing explicit order.
   = In either of these cases, please ensure to check the code does what you expect it to, because of changed semantics.

error: A sequence within an operand of binary operation `+` can obscure program logic and is not allowed by this compiler.
   ┌─ TEMPFILE:13:9
   │
13 │         inc(&mut {x = x + 1; x}) + { inc(&mut x); inc(&mut x) + inc(&mut x) } + { inc(&mut x); inc(&mut x); inc(&mut x) }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │                                                                       │
   │         │                                                                       non-empty sequence
   │         binary operation `+`
   │
   = To compile this code, either:
   = 1. upgrade to language version 2.0 or later (which uses strict left-to-right evaluation order),
   = 2. rewrite the code to remove sequences from directly within binary operations,
   =    e.g., save intermediate results providing explicit order.
   = In either of these cases, please ensure to check the code does what you expect it to, because of changed semantics.


task 1 lines 19-19:  run 0xc0ffee::m::test1
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 2 lines 21-21:  run 0xc0ffee::m::test2
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
